--- a/index.html
+++ b/index.html
@@ -1,53 +1,54 @@
 <HTML>
 <HEAD>
-<title>Социальная сеть instagram</title>
+<title>РЎРѕС†РёР°Р»СЊРЅР°СЏ СЃРµС‚СЊ instagram</title>
+  <meta chatset="utf-8">
 </HEAD>
 <BODY bgcolor="#FFCC99">
-<H1>Наша официальная страница</H1>
+<H1>РќР°С€Р° РѕС„РёС†РёР°Р»СЊРЅР°СЏ СЃС‚СЂР°РЅРёС†Р°</H1>
 <HR color="blue" size="3">
-<P>Это очень классное приложение.</P>
-<P><A href="https://www.instagram.com/">Подробнее</A></P>
-<font size="4" color="green"> <i>Плюсы</i> </font>
+<P>Р­С‚Рѕ РѕС‡РµРЅСЊ РєР»Р°СЃСЃРЅРѕРµ РїСЂРёР»РѕР¶РµРЅРёРµ.</P>
+<P><A href="https://www.instagram.com/">РџРѕРґСЂРѕР±РЅРµРµ</A></P>
+<font size="4" color="green"> <i>РџР»СЋСЃС‹</i> </font>
 <OL start="4" type="I">
-<LI>Быстрая загрузка снимков в интернет</LI>
-<LI>Простой поиск фотографий по интересам</LI>
-<LI>Несложная подписка на аккаунты других пользователей</LI>
+<LI>Р‘С‹СЃС‚СЂР°СЏ Р·Р°РіСЂСѓР·РєР° СЃРЅРёРјРєРѕРІ РІ РёРЅС‚РµСЂРЅРµС‚</LI>
+<LI>РџСЂРѕСЃС‚РѕР№ РїРѕРёСЃРє С„РѕС‚РѕРіСЂР°С„РёР№ РїРѕ РёРЅС‚РµСЂРµСЃР°Рј</LI>
+<LI>РќРµСЃР»РѕР¶РЅР°СЏ РїРѕРґРїРёСЃРєР° РЅР° Р°РєРєР°СѓРЅС‚С‹ РґСЂСѓРіРёС… РїРѕР»СЊР·РѕРІР°С‚РµР»РµР№</LI>
 </OL>
 
-<font size="4" color="green"> <i>Минусы</i> </font> 
+<font size="4" color="green"> <i>РњРёРЅСѓСЃС‹</i> </font> 
 <UL type="square">
-<LI>Низкие возможности в плане настройки приватности</LI>
-<LI>Отсутсвие полноценного сайта для загрузки фото</LI>
-<LI>Невозможность скачать фотографии</LI>
+<LI>РќРёР·РєРёРµ РІРѕР·РјРѕР¶РЅРѕСЃС‚Рё РІ РїР»Р°РЅРµ РЅР°СЃС‚СЂРѕР№РєРё РїСЂРёРІР°С‚РЅРѕСЃС‚Рё</LI>
+<LI>РћС‚СЃСѓС‚СЃРІРёРµ РїРѕР»РЅРѕС†РµРЅРЅРѕРіРѕ СЃР°Р№С‚Р° РґР»СЏ Р·Р°РіСЂСѓР·РєРё С„РѕС‚Рѕ</LI>
+<LI>РќРµРІРѕР·РјРѕР¶РЅРѕСЃС‚СЊ СЃРєР°С‡Р°С‚СЊ С„РѕС‚РѕРіСЂР°С„РёРё</LI>
 </UL>
 
-<font size="4" color="green"> <b>Возможности инстаграм</b> </font>
+<font size="4" color="green"> <b>Р’РѕР·РјРѕР¶РЅРѕСЃС‚Рё РёРЅСЃС‚Р°РіСЂР°Рј</b> </font>
 <OL>
-<LI>создание снимков и видеофайлов</LI>
-<LI>общение по интересам в комментариях к фото 
+<LI>СЃРѕР·РґР°РЅРёРµ СЃРЅРёРјРєРѕРІ Рё РІРёРґРµРѕС„Р°Р№Р»РѕРІ</LI>
+<LI>РѕР±С‰РµРЅРёРµ РїРѕ РёРЅС‚РµСЂРµСЃР°Рј РІ РєРѕРјРјРµРЅС‚Р°СЂРёСЏС… Рє С„РѕС‚Рѕ 
 <UL>
-<LI>путешествие</LI>
-<LI>чтение</LI>
-<LI><A HREF="https://softcatalog.info/ru/obzor/programmy-dlya-montazha-video">обработка видео</A></LI>
+<LI>РїСѓС‚РµС€РµСЃС‚РІРёРµ</LI>
+<LI>С‡С‚РµРЅРёРµ</LI>
+<LI><A HREF="https://softcatalog.info/ru/obzor/programmy-dlya-montazha-video">РѕР±СЂР°Р±РѕС‚РєР° РІРёРґРµРѕ</A></LI>
 </UL>
 </LI>
-<LI>просмотр фотографий других пользователей</LI>
+<LI>РїСЂРѕСЃРјРѕС‚СЂ С„РѕС‚РѕРіСЂР°С„РёР№ РґСЂСѓРіРёС… РїРѕР»СЊР·РѕРІР°С‚РµР»РµР№</LI>
 </OL>
 
 <br>
 <p align="left">
 <img src="https://prime-toys.ru/upload/images/a64389aee1db7c3da142b83af3ebd62e.png"
 width="200"
-alt="фото: инстаграм Гимназии №13"
-title="инстаграм Гимназии №13">
+alt="С„РѕС‚Рѕ: РёРЅСЃС‚Р°РіСЂР°Рј Р“РёРјРЅР°Р·РёРё в„–13"
+title="РёРЅСЃС‚Р°РіСЂР°Рј Р“РёРјРЅР°Р·РёРё в„–13">
 <br></>
 <p align="justify">
 
 <table border="1">
 
 <tr>
-<td>понравилось</td>
-<td>оставили комментарий</td>
+<td>РїРѕРЅСЂР°РІРёР»РѕСЃСЊ</td>
+<td>РѕСЃС‚Р°РІРёР»Рё РєРѕРјРјРµРЅС‚Р°СЂРёР№</td>
 
 </tr>
 
