--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <HTML>
 <HEAD>
 <title>Социальная сеть instagram</title>
-  <meta chatset="utf-8">
+  <meta chatset="windows-1251">
 </HEAD>
 <BODY bgcolor="#FFCC99">
 <H1>Наша официальная страница</H1>
